most changes are details
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@147 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -285,7 +285,7 @@
   </action>
   <action name="FileExitAction" >
    <property name="text" >
-    <string>E&amp;xit</string>
+    <string>Q&amp;uit</string>
    </property>
   </action>
   <action name="EditNewGroupAction" >
