--- a/src/forms/AddBookmarkDlg.ui
+++ b/src/forms/AddBookmarkDlg.ui
@@ -1,18 +1,53 @@
 <ui version="4.0" >
+ <author>Tarek Saidi</author>
  <class>AddBookmarkDlg</class>
  <widget class="QWidget" name="AddBookmarkDlg" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>497</width>
-    <height>148</height>
+    <width>500</width>
+    <height>180</height>
    </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize" >
+   <size>
+    <width>500</width>
+    <height>180</height>
+   </size>
+  </property>
+  <property name="maximumSize" >
+   <size>
+    <width>500</width>
+    <height>180</height>
+   </size>
   </property>
   <property name="windowTitle" >
    <string>Add Bookmark</string>
   </property>
   <layout class="QVBoxLayout" >
+   <item>
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>50</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item>
     <layout class="QGridLayout" >
      <item row="0" column="0" >
@@ -45,6 +80,13 @@
     </layout>
    </item>
    <item>
+    <widget class="Line" name="line" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="standardButtons" >
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
@@ -53,6 +95,7 @@
    </item>
   </layout>
  </widget>
+ <includes/>
  <resources/>
  <connections/>
 </ui>
