--- a/src/forms/ManageBookmarksDlg.ui
+++ b/src/forms/ManageBookmarksDlg.ui
@@ -5,14 +5,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>452</width>
+    <width>280</width>
     <height>360</height>
    </rect>
+  </property>
+  <property name="minimumSize" >
+   <size>
+    <width>280</width>
+    <height>300</height>
+   </size>
   </property>
   <property name="windowTitle" >
    <string>Manage Bookmarks</string>
   </property>
   <layout class="QVBoxLayout" >
+   <item>
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>50</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item>
     <layout class="QHBoxLayout" >
      <item>
@@ -21,19 +43,70 @@
      <item>
       <layout class="QVBoxLayout" >
        <item>
-        <widget class="QToolButton" name="Button_Add" />
+        <widget class="QToolButton" name="Button_Add" >
+         <property name="iconSize" >
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="Button_Delete" />
+        <widget class="QToolButton" name="Button_Edit" >
+         <property name="iconSize" >
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="Button_Edit" />
+        <widget class="QToolButton" name="Button_Delete" >
+         <property name="iconSize" >
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="Button_Up" />
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType" >
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>10</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
-        <widget class="QToolButton" name="Button_Down" />
+        <widget class="QToolButton" name="Button_Up" >
+         <property name="iconSize" >
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="Button_Down" >
+         <property name="iconSize" >
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer>
