--- a/src/forms/EditGroupDlg.ui
+++ b/src/forms/EditGroupDlg.ui
@@ -132,11 +132,11 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <tabstops>
   <tabstop>EditTitle</tabstop>
   <tabstop>ComboIconPicker</tabstop>
  </tabstops>
+ <includes/>
  <resources/>
  <connections/>
 </ui>
