--- a/src/forms/SimplePasswordDlg.ui
+++ b/src/forms/SimplePasswordDlg.ui
@@ -125,7 +125,7 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <includes/>
  <resources/>
  <connections/>
 </ui>
